--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Mi pagina web personal</title>
+<title>Política de privacidad</title>
 </head>
 <body>
-<h1> Esto es un prueba</h1>
+<h1>Los datos obtenidos con el micrófono en la sección osciloscopio NO se almacenan ni se envían a otro dispositivo, 
+  estos datos solo son utilizados para crear una gráfica que se muestra en pantalla.</h1>
 </body>
 </html>
