--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <body>
   <h1> Política de privacidad </h1> 
   
-<h3>Los datos obtenidos con el micrófono en la sección osciloscopio NO se almacenan ni se envían a otro dispositivo, 
-  estos datos solo son utilizados para crear una gráfica en tiempo real que se muestra en pantalla.</h3>
+<h3>No existe ninguna recopilacion de datos.</h3>
 </body>
 </html>
